Fixed an overflow bug on small screens and other fixes

--- a/sample-app/css/style.css
+++ b/sample-app/css/style.css
@@ -576,6 +576,7 @@ a:visited {
 }
 
 .home-body .app-loading {
+  position: fixed;
   z-index: 999;
   border-radius: 0;
 }
@@ -639,7 +640,6 @@ a:visited {
 }
 
 .home-tv img {
-  display: block;
   max-width: 100%;
   opacity: 0;
   -webkit-transition: opacity .2s ease-out, -webkit-transform .2s ease-out;
@@ -664,7 +664,6 @@ a:visited {
 }
 
 .home-tv .icon-tv:before {
-  display: block;
   position: absolute;
   top: -55px;
   left: -20px;
@@ -705,6 +704,7 @@ a:visited {
   float: left;
   margin-top: 75px;
   margin-left: 40px;
+  overflow: hidden;
 }
 
 .home-music .icon:before {
@@ -717,26 +717,29 @@ a:visited {
   text-shadow: 0 1px 2px rgba(0,0,0,.15);  
 }
 
-.home-music .icon-mute:before {
-}
-
 .home-music .icon-volume-low,
 .home-music .icon-volume-medium,
 .home-music .icon-volume-high {
+  display: none;
+}
+
+.music-on .home-music .icon-volume-low,
+.music-on .home-music .icon-volume-medium,
+.music-on .home-music .icon-volume-high {
   -webkit-animation: pulse 1s infinite;
      -moz-animation: pulse 1s infinite;
        -o-animation: pulse 1s infinite;
           animation: pulse 1s infinite;
 }
 
-.home-music .icon-volume-medium {
+.music-on .home-music .icon-volume-medium {
   -webkit-animation-delay: .1s;
      -moz-animation-delay: .1s;
        -o-animation-delay: .1s;
           animation-delay: .1s;
 }
 
-.home-music .icon-volume-high {
+.music-on .home-music .icon-volume-high {
   -webkit-animation-delay: .2s;
      -moz-animation-delay: .2s;
        -o-animation-delay: .2s;
